switched back to continuous versioning scheme

--- a/org.eclipse.emf.emfstore.site/buckminster.properties
+++ b/org.eclipse.emf.emfstore.site/buckminster.properties
@@ -6,11 +6,11 @@ buckminster.temp.root=${workspace.root}/buckminster.temp
 
 # How .qualifier in versions should be replaced -- do NOT remove comments!
 # MILESTONE releases
-qualifier.replacement.*=M2
+#qualifier.replacement.*=M2
 # FINAL releases
 #qualifier.replacement.*=
 # CONTINOUS releases
-#qualifier.replacement.*=generator:buildTimestamp
+qualifier.replacement.*=generator:buildTimestamp
 #generator.buildTimestamp.format='v'yyyyMMdd-HHmm
 
 # include all possible targets
