commented in generator.buildTimestamp

--- a/org.eclipse.emf.emfstore.site/buckminster.properties
+++ b/org.eclipse.emf.emfstore.site/buckminster.properties
@@ -11,7 +11,7 @@ buckminster.temp.root=${workspace.root}/buckminster.temp
 #qualifier.replacement.*=
 # CONTINOUS releases
 qualifier.replacement.*=generator:buildTimestamp
-#generator.buildTimestamp.format='v'yyyyMMdd-HHmm
+generator.buildTimestamp.format='v'yyyyMMdd-HHmm
 
 # include all possible targets
 target.os=*
