--- a/org.eclipse.emf.emfstore.common/build.properties
+++ b/org.eclipse.emf.emfstore.common/build.properties
@@ -3,4 +3,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               lib/commons-io-2.0.1.jar
+               lib/commons-io-2.0.1.jar,\
+               lib/org.apache.commons.lang_2.4.0.v201005080502.jar
