fixed error reporting feature ID in site project

--- a/org.eclipse.emf.emfstore.site/build.properties
+++ b/org.eclipse.emf.emfstore.site/build.properties
@@ -16,7 +16,7 @@ category.members.org.eclipse.emf.emfstore.add=org.eclipse.emf.emfstore.client.tr
                                               org.eclipse.emf.emfstore.modelmutator.feature, \
                                               org.eclipse.emf.emfstore.fuzzy.feature, \
                                               org.eclipse.emf.emfstore.fuzzy.test.feature, \
-                                              org.eclipse.emf.emfstore.client.ui.errorreporting
+                                              org.eclipse.emf.emfstore.client.ui.errorreporting.feature
 
 category.id.org.eclipse.emf.ecp=EMFClient Platform (Install all to get started)
 category.description.org.eclipse.emf.ecp=Core Features of EMF Client Platform, a reflective UI for EMF.
