preparing milestone release M4

--- a/org.eclipse.emf.emfstore.site/buckminster.properties
+++ b/org.eclipse.emf.emfstore.site/buckminster.properties
@@ -6,12 +6,12 @@ buckminster.temp.root=${workspace.root}/buckminster.temp
 
 # How .qualifier in versions should be replaced -- do NOT remove comments!
 # MILESTONE releases
-#qualifier.replacement.*=M3
+qualifier.replacement.*=M4
 # FINAL releases
 #qualifier.replacement.*=
 # CONTINOUS releases
-qualifier.replacement.*=generator:buildTimestamp
-generator.buildTimestamp.format='v'yyyyMMdd-HHmm
+#qualifier.replacement.*=generator:buildTimestamp
+#generator.buildTimestamp.format='v'yyyyMMdd-HHmm
 
 # include all possible targets
 target.os=*
