--- a/org.eclipse.emf.emfstore.client/plugin.xml
+++ b/org.eclipse.emf.emfstore.client/plugin.xml
@@ -29,6 +29,7 @@
    <extension-point id="org.eclipse.emf.emfstore.client.version" name="Client Version " schema="schema/org.eclipse.emf.emfstore.client.version.exsd"/>
    <extension-point id="org.eclipse.emf.emfstore.client.merge.conflictDetectorStrategy" name="Conflict Detector Strategy" schema="schema/org.eclipse.emf.emfstore.client.merge.conflictDetectorStrategy.exsd"/>
    <extension-point id="org.eclipse.emf.emfstore.client.merge.conflictHandler" name="Conflict Handler" schema="schema/org.eclipse.emf.emfstore.client.merge.conflictHandler.exsd"/>
+   <extension-point id="org.eclipse.emf.emfstore.client.wrapper.applychanges" name="Apply changes wrapper" schema="schema/org.eclipse.emf.emfstore.client.wrapper.applychanges.exsd"/>
   <extension point="org.eclipse.emf.ecore.generated_package">
     <package 
        uri = "http://eclipse.org/emf/emfstore/client/model" 
