--- a/org.eclipse.emf.emfstore.common.model/plugin.xml
+++ b/org.eclipse.emf.emfstore.common.model/plugin.xml
@@ -14,6 +14,7 @@
    <extension-point id="org.eclipse.emf.emfstore.common.model.singletonidresolver" name="Singleton ID Resolver" schema="schema/org.eclipse.emf.emfstore.common.model.singletonidresolver.exsd"/>
    <extension-point id="org.eclipse.emf.emfstore.common.model.serializationoptions" name="Serialization Options" schema="schema/org.eclipse.emf.emfstore.common.model.serializationoptions.exsd"/>
    <extension-point id="org.eclipse.emf.emfstore.common.model.modelelementidgenerator" name="ModelElementIDGenerator" schema="schema/org.eclipse.emf.emfstore.common.model.modelelementidgenerator.exsd"/>
+   <extension-point id="org.eclipse.emf.emfstore.common.model.resourceoptions" name="Common Model Resource Options" schema="schema/org.eclipse.emf.emfstore.common.model.resourceoptions.exsd"/>
 
    <extension point="org.eclipse.emf.ecore.generated_package">
       <package
