--- a/org.eclipse.emf.emfstore.server/plugin.xml
+++ b/org.eclipse.emf.emfstore.server/plugin.xml
@@ -5,6 +5,7 @@
    <extension-point id="org.eclipse.emf.emfstore.server.poststartuplistener" name="PostStartupListener" schema="schema/org.eclipse.emf.emfstore.server.poststartuplistener.exsd"/>
    <extension-point id="org.eclipse.emf.emfstore.server.authenticationfactory" name="Authentication Factory" schema="schema/org.eclipse.emf.emfstore.server.authenticationfactory.exsd"/>
    <extension-point id="org.eclipse.emf.emfstore.server.locationprovider" name="Location Provider" schema="schema/org.eclipse.emf.emfstore.server.locationprovider.exsd"/>
+   <extension-point id="org.eclipse.emf.emfstore.server.conflictdetection.excludedfeatures" name="Conflict Detection Excluded Features" schema="schema/org.eclipse.emf.emfstore.server.conflictdetection.excludedfeatures.exsd"/>
    <extension
          id="application"
          name="EMFStore server"
