attribute conflict description includes old value

--- a/org.eclipse.emf.emfstore.client/resources/conflictdescription.ini
+++ b/org.eclipse.emf.emfstore.client/resources/conflictdescription.ini
@@ -3,7 +3,7 @@
 #
 
 
-attributeconflict = You have changed the [feature] attribute of [modelelement] to [myvalue]. This attribute was changed to [theirvalue] on the repository.
+attributeconflict = You have changed the [feature] attribute of [modelelement] from [oldvalue] to [myvalue]. This attribute was changed to [theirvalue] on the repository.
 branchmerge.attributeconflict = The [feature] attribute of [modelelement] was changed to [myvalue] on the incoming branch. This attribute is set to [theirvalue] on the current branch.
 
 
