--- a/org.eclipse.emf.emfstore.client.ui/plugin.xml
+++ b/org.eclipse.emf.emfstore.client.ui/plugin.xml
@@ -5,6 +5,7 @@
   <extension-point id="org.eclipse.emf.emfstore.client.ui.commitdialog.tray" name="org.eclipse.emf.emfstore.client.ui.commitdialog.tray" schema="schema/org.eclipse.emf.emfstore.client.ui.commitdialog.tray.exsd"/>
   <extension-point id="org.eclipse.emf.emfstore.client.ui.merge.detailwidget" name="Merge Detail Widget" schema="schema/org.eclipse.emf.emfstore.client.ui.merge.detailwidget.exsd"/>
   <extension-point id="org.eclipse.emf.emfstore.client.ui.merge.labelprovider" name="Merge Label Provider" schema="schema/org.eclipse.emf.emfstore.client.ui.merge.labelprovider.exsd"/>
+  <extension-point id="org.eclipse.emf.emfstore.client.ui.disabledsavebutton" name="Disable Save Button" schema="schema/org.eclipse.emf.emfstore.client.ui.disabledsavebutton.exsd"/>
   <extension
         point="org.eclipse.ui.handlers">
       <handler
