created internal emfstore.common package

--- a/org.eclipse.emf.emfstore.common/build.properties
+++ b/org.eclipse.emf.emfstore.common/build.properties
@@ -4,4 +4,5 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                lib/commons-io-2.0.1.jar,\
-               lib/org.apache.commons.lang_2.4.0.v201005080502.jar
+               lib/org.apache.commons.lang_2.4.0.v201005080502.jar,\
+               lib/com.google.guava_10.0.1.v201203051515.jar
