--- a/org.eclipse.emf.emfstore.client.ui/plugin.xml
+++ b/org.eclipse.emf.emfstore.client.ui/plugin.xml
@@ -6,6 +6,7 @@
   <extension-point id="org.eclipse.emf.emfstore.client.ui.merge.detailwidget" name="Merge Detail Widget" schema="schema/org.eclipse.emf.emfstore.client.ui.merge.detailwidget.exsd"/>
   <extension-point id="org.eclipse.emf.emfstore.client.ui.merge.labelprovider" name="Merge Label Provider" schema="schema/org.eclipse.emf.emfstore.client.ui.merge.labelprovider.exsd"/>
   <extension-point id="org.eclipse.emf.emfstore.client.ui.disableSaveControls" name="Disable save controls contributed by EMFStore" schema="schema/org.eclipse.emf.emfstore.client.ui.disableSaveControls.exsd"/>
+  <extension-point id="org.eclipse.emf.emfstore.client.ui.filteredTypes" name="Filtered Types" schema="schema/org.eclipse.emf.emfstore.client.ui.filteredTypes.exsd"/>
   <extension
         point="org.eclipse.ui.handlers">
       <handler
