--- a/org.eclipse.emf.emfstore.client/plugin.xml
+++ b/org.eclipse.emf.emfstore.client/plugin.xml
@@ -30,7 +30,7 @@
    <extension-point id="org.eclipse.emf.emfstore.client.merge.conflictDetectorStrategy" name="Conflict Detector Strategy" schema="schema/org.eclipse.emf.emfstore.client.merge.conflictDetectorStrategy.exsd"/>
    <extension-point id="org.eclipse.emf.emfstore.client.merge.conflictHandler" name="Conflict Handler" schema="schema/org.eclipse.emf.emfstore.client.merge.conflictHandler.exsd"/>
    <extension-point id="org.eclipse.emf.emfstore.client.wrapper.applychanges" name="Apply changes wrapper" schema="schema/org.eclipse.emf.emfstore.client.wrapper.applychanges.exsd"/>
-   <extension-point id="org.eclipse.emf.emfstore.client.merge.callback" name="Provides callback facilities during the merge process" schema="schema/org.eclipse.emf.emfstore.client.merge.callback.exsd"/>
+   <extension-point id="org.eclipse.emf.emfstore.client.mergeObserver" name="Merge Observer" schema="schema/org.eclipse.emf.emfstore.client.mergeObserver.exsd"/>
   <extension point="org.eclipse.emf.ecore.generated_package">
     <package 
        uri = "http://eclipse.org/emf/emfstore/client/model" 
@@ -85,6 +85,13 @@
      <observer
            extensionPointName="org.eclipse.emf.emfstore.client.exceptionObserver"
            observerAttributeName="exceptionObserver">
+     </observer>
+  </extension>
+  <extension
+        point="org.eclipse.emf.emfstore.common.observer">
+     <observer
+           extensionPointName="org.eclipse.emf.emfstore.client.mergeObserver"
+           observerAttributeName="mergeObserver">
      </observer>
   </extension>
 
