show a different message if a composite conflicts with another composite

--- a/org.eclipse.emf.emfstore.client/resources/conflictdescription.ini
+++ b/org.eclipse.emf.emfstore.client/resources/conflictdescription.ini
@@ -41,9 +41,10 @@ branchmerge.multiattributesetsetconflict = An element from the [feature] attribu
 
 compositeconflict.my = A change on the [opposite] from the repository conflicts with your operation "[compdescription]".
 compositeconflict.their = Your change on the [opposite] conflicts with the operation "[compdescription]" from the repository.
+compositeconflict.both = The operation "[incomingcompdescription]" from the repository conflicts with your operation "[localcompdescription]"
 branchmerge.compositeconflict.my = A change on the [opposite] from current branch conflicts with the incoming operation "[compdescription]".
 branchmerge.compositeconflict.their = The incoming change on the [opposite] conflicts with the operation "[compdescription]" from the current branch.
-
+branchmerge.compositeconflict.both = The incoming operation "[incomingcompdescription]" conflicts with the operation "[localcompdescription]" from the current branch.
 
 deletionconflict.my = You have deleted the [modelelement]. This deletion conflicts with a change on the [firstother] element[otherinvolved]. Please choose an option.
 deletionconflict.their = The [modelelement] was deleted on the repository which conflicts with the change on your [firstother][otherinvolved]. Please choose an option.
