moved projectStateChecksum field from PrimaryVersionSpec

--- a/org.eclipse.emf.emfstore.server.model.edit/plugin.properties
+++ b/org.eclipse.emf.emfstore.server.model.edit/plugin.properties
@@ -462,3 +462,4 @@ _UI_ModelElementQuery_upperLimit_feature = Upper Limit
 _UI_ModelElementQuery_lowerLimit_feature = Lower Limit
 _UI_PrimaryVersionSpec_projectStateChecksum_feature = Project State Checksum
 _UI_ChangePackage_projectStateChecksum_feature = Project State Checksum
+_UI_Version_projectStateChecksum_feature = Project State Checksum
