added UIUpdateProjectToVersionController moved UIRegisterEPackageController to controller package moved RegiserEPackageHandler to handler package Manifest UI Dependencies now use importPackage updated plugin due to refactoring

--- a/org.eclipse.emf.emfstore.client.ui/plugin.xml
+++ b/org.eclipse.emf.emfstore.client.ui/plugin.xml
@@ -785,7 +785,7 @@
             name="Revert Revision">
       </command>
       <command
-            defaultHandler="org.eclipse.emf.emfstore.client.ui.epackages.RegisterEPackageHandler"
+            defaultHandler="org.eclipse.emf.emfstore.client.ui.handlers.RegisterEPackageHandler"
             id="org.eclipse.emf.emfstore.client.ui.repositorybrowser.RegisterEPackage"
             name="RegisterEPackage">
       </command>
