--- a/org.eclipse.emf.emfstore.releng/build.properties
+++ b/org.eclipse.emf.emfstore.releng/build.properties
@@ -5,7 +5,7 @@ src.includes = build.cquery,\
 
 # buckminster variables
 platform.version=3.7
-orbit.version=S20110907174232
+orbit.version=R20130118183705
 eclipse.downloads=http://download.eclipse.org
 resolve.target.platform=true
 
