--- a/org.eclipse.emf.emfstore.ecore/plugin.xml
+++ b/org.eclipse.emf.emfstore.ecore/plugin.xml
@@ -2,13 +2,13 @@
 <?eclipse version="3.4"?>
 <plugin>
    <extension
-         point="org.eclipse.emf.emfstore.internal.common.model.singletonidresolver">
+         point="org.eclipse.emf.emfstore.common.model.singletonidresolver">
 	  <singletonidresolver
             class="org.eclipse.emf.emfstore.internal.ecore.EDatatypeIdResolver">
       </singletonidresolver>
    </extension>
    <extension
-         point="org.eclipse.emf.emfstore.internal.common.model.ignoredatatype">
+         point="org.eclipse.emf.emfstore.common.model.ignoredatatype">
       <ignoredatatype
             type="org.eclipse.emf.ecore.EGenericType">
       </ignoredatatype>
