--- a/org.eclipse.emf.emfstore.client.ui/plugin.xml
+++ b/org.eclipse.emf.emfstore.client.ui/plugin.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.2"?>
 <plugin>
-   <extension-point id="org.eclipse.emf.emfstore.internal.client.ui.merge.customoption" name="customoption" schema="schema/org.eclipse.emf.emfstore.internal.client.ui.customoption.exsd"/>
-  <extension-point id="org.eclipse.emf.emfstore.internal.client.ui.commitdialog.tray" name="org.eclipse.emf.emfstore.internal.client.ui.commitdialog.tray" schema="schema/org.eclipse.emf.emfstore.internal.client.ui.commitdialog.tray.exsd"/>
-  <extension-point id="org.eclipse.emf.emfstore.internal.client.ui.merge.detailwidget" name="Merge Detail Widget" schema="schema/org.eclipse.emf.emfstore.internal.client.ui.merge.detailwidget.exsd"/>
-  <extension-point id="org.eclipse.emf.emfstore.internal.client.ui.merge.labelprovider" name="Merge Label Provider" schema="schema/org.eclipse.emf.emfstore.internal.client.ui.merge.labelprovider.exsd"/>
-  <extension-point id="org.eclipse.emf.emfstore.internal.client.ui.disableSaveControls" name="Disable save controls contributed by EMFStore" schema="schema/org.eclipse.emf.emfstore.internal.client.ui.disableSaveControls.exsd"/>
-  <extension-point id="org.eclipse.emf.emfstore.internal.client.ui.filteredTypes" name="Filtered Types" schema="schema/org.eclipse.emf.emfstore.internal.client.ui.filteredTypes.exsd"/>
+   <extension-point id="org.eclipse.emf.emfstore.client.ui.merge.customoption" name="customoption" schema="schema/org.eclipse.emf.emfstore.client.ui.customoption.exsd"/>
+  <extension-point id="org.eclipse.emf.emfstore.client.ui.commitdialog.tray" name="Commit Dialog Tray" schema="schema/org.eclipse.emf.emfstore.client.ui.commitdialog.tray.exsd"/>
+  <extension-point id="org.eclipse.emf.emfstore.client.ui.merge.detailwidget" name="Merge Detail Widget" schema="schema/org.eclipse.emf.emfstore.client.ui.merge.detailwidget.exsd"/>
+  <extension-point id="org.eclipse.emf.emfstore.client.ui.merge.labelprovider" name="Merge Label Provider" schema="schema/org.eclipse.emf.emfstore.client.ui.merge.labelprovider.exsd"/>
+  <extension-point id="org.eclipse.emf.emfstore.client.ui.disableSaveControls" name="Disable save controls contributed by EMFStore" schema="schema/org.eclipse.emf.emfstore.client.ui.disableSaveControls.exsd"/>
+  <extension-point id="org.eclipse.emf.emfstore.client.ui.filteredTypes" name="Filtered Types" schema="schema/org.eclipse.emf.emfstore.client.ui.filteredTypes.exsd"/>
   <extension
         point="org.eclipse.ui.handlers">
       <handler
