--- a/org.eclipse.emf.emfstore.client.ui/plugin.xml
+++ b/org.eclipse.emf.emfstore.client.ui/plugin.xml
@@ -146,7 +146,7 @@
      </handler>
   </extension>
   <extension
-        point="org.eclipse.emf.emfstore.internal.client.notify.postinit">
+        point="org.eclipse.emf.emfstore.client.notify.postinit">
      <initiator
            class="org.eclipse.emf.emfstore.internal.client.ui.util.ProjectListUpdater">
      </initiator>
@@ -629,13 +629,13 @@
      </decorator>
   </extension>
    <extension
-         point="org.eclipse.emf.emfstore.internal.client.loginObserver">
+         point="org.eclipse.emf.emfstore.client.loginObserver">
       <observer
             loginObserver="org.eclipse.emf.emfstore.internal.client.ui.views.emfstorebrowser.provider.ESBrowserLabelDecorator">
       </observer>
    </extension>
    <extension
-         point="org.eclipse.emf.emfstore.internal.client.logoutObserver">
+         point="org.eclipse.emf.emfstore.client.logoutObserver">
       <observer
             logoutObserver="org.eclipse.emf.emfstore.internal.client.ui.views.emfstorebrowser.provider.ESBrowserLabelDecorator">
       </observer>
