--- a/org.eclipse.emf.emfstore.client.test/plugin.xml
+++ b/org.eclipse.emf.emfstore.client.test/plugin.xml
@@ -188,7 +188,7 @@
    <extension
          point="org.eclipse.emf.emfstore.client.sessionprovider">
       <sessionProvider
-            class="org.eclipse.emf.emfstore.client.test.server.TestSessionProvider">
+            class="org.eclipse.emf.emfstore.client.test.TestSessionProvider">
       </sessionProvider>
    </extension>
 
