--- a/org.eclipse.emf.emfstore.ecore/.project
+++ b/org.eclipse.emf.emfstore.ecore/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.eclipse.emf.emfstore.internal.ecore</name>
+	<name>org.eclipse.emf.emfstore.ecore</name>
 	<comment></comment>
 	<projects>
 	</projects>
