--- a/org.eclipse.emf.emfstore.server/.project
+++ b/org.eclipse.emf.emfstore.server/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.eclipse.emf.emfstore.internal.serverxxx</name>
+	<name>org.eclipse.emf.emfstore.server</name>
 	<comment></comment>
 	<projects>
 	</projects>
