--- a/org.eclipse.emf.emfstore.examplemodel.edit/plugin.properties
+++ b/org.eclipse.emf.emfstore.examplemodel.edit/plugin.properties
@@ -62,3 +62,8 @@ _UI_RefereeToGamesMap_key_feature = Key
 _UI_RefereeToGamesMap_value_feature = Value
 _UI_Area_areas_feature = Areas
 _UI_Area_tournaments_feature = Tournaments
+_UI_Player_eMails_feature = EMails
+_UI_Player_numberOfVictories_feature = Number Of Victories
+_UI_Player_playedTournamentTypes_feature = Played Tournament Types
+_UI_Tournament_priceMoney_feature = Price Money
+_UI_Tournament_receivesTrophy_feature = Receives Trophy
