--- a/org.eclipse.emf.emfstore.examplemodel/pom.xml
+++ b/org.eclipse.emf.emfstore.examplemodel/pom.xml
@@ -10,6 +10,6 @@
   </parent>
   <groupId>org.eclipse.emf.emfstore</groupId>
   <artifactId>org.eclipse.emf.emfstore.examplemodel</artifactId>
-  <version>0.9.3</version>
+  <version>0.9.3-SNAPSHOT</version>
   <packaging>eclipse-plugin</packaging>
 </project>
