updated product definition

--- a/org.eclipse.emf.emfstore.server/plugin.xml
+++ b/org.eclipse.emf.emfstore.server/plugin.xml
@@ -24,7 +24,7 @@
          name="EMFStore"
          point="org.eclipse.core.runtime.products">
       <product
-            application="org.eclipse.emf.emfstore.internal.server.application"
+            application="org.eclipse.emf.emfstore.server.application"
             description="Server Application of EMFStore"
             name="EMFStore Server">
          <property
