renamed server api package

--- a/org.eclipse.emf.emfstore.client.ui/plugin.xml
+++ b/org.eclipse.emf.emfstore.client.ui/plugin.xml
@@ -851,4 +851,10 @@
          </variable>
       </sourceProvider>
    </extension>
+   <extension
+         point="org.eclipse.emf.emfstore.client.notify.postinit">
+      <initiator
+            class="org.eclipse.emf.emfstore.internal.client.ui.util.ProjectListUpdater">
+      </initiator>
+   </extension>
 </plugin>
