--- a/org.eclipse.emf.emfstore.examplemodel.edit/plugin.properties
+++ b/org.eclipse.emf.emfstore.examplemodel.edit/plugin.properties
@@ -67,3 +67,4 @@ _UI_Player_numberOfVictories_feature = Number Of Victories
 _UI_Player_playedTournamentTypes_feature = Played Tournament Types
 _UI_Tournament_priceMoney_feature = Price Money
 _UI_Tournament_receivesTrophy_feature = Receives Trophy
+_UI_Tournament_matchDays_feature = Match Days
