--- a/org.eclipse.emf.emfstore.client/plugin.xml
+++ b/org.eclipse.emf.emfstore.client/plugin.xml
@@ -9,24 +9,25 @@
 -->
 
 <plugin>
-   <extension-point id="org.eclipse.emf.emfstore.client.workspaceLocationProvider" name="Workspace Location Provider" schema="schema/org.eclipse.emf.emfstore.client.workspaceLocationProvider.exsd"/>
-   <extension-point id="org.eclipse.emf.emfstore.client.defaultConfigurationProvider" name="Default Configuration Provider" schema="schema/org.eclipse.emf.emfstore.client.defaultConfigurationProvider.exsd"/>
-   <extension-point id="org.eclipse.emf.emfstore.client.notify.postinit" name="Workspace Initiated" schema="schema/org.eclipse.emf.emfstore.client.notify.workspace.exsd"/>
-   <extension-point id="org.eclipse.emf.emfstore.client.editingDomainProvider" name="EditingDomain Provider" schema="schema/org.eclipse.emf.emfstore.client.editingDomainProvider.exsd"/>
-   <extension-point id="org.eclipse.emf.emfstore.client.recording.options" name="Recording options" schema="schema/org.eclipse.emf.emfstore.client.recording.options.exsd"/>
-   <extension-point id="org.eclipse.emf.emfstore.client.inverseCrossReferenceCache" name="Inverse Cross Referene Cache" schema="schema/org.eclipse.emf.emfstore.client.inverseCrossReferenceCache.exsd"/>
-   <extension-point id="org.eclipse.emf.emfstore.client.sessionprovider" name="SessionProvider" schema="schema/org.eclipse.emf.emfstore.client.sessionprovider.exsd"/>
-   <extension-point id="org.eclipse.emf.emfstore.client.notificationFilter" name="Notification Filter" schema="schema/org.eclipse.emf.emfstore.client.notificationFilter.exsd"/>
-   <extension-point id="org.eclipse.emf.emfstore.client.loginObserver" name="Login Observer" schema="schema/org.eclipse.emf.emfstore.client.loginObserver.exsd"/>
-   <extension-point id="org.eclipse.emf.emfstore.client.logoutObserver" name="Logout Observer" schema="schema/org.eclipse.emf.emfstore.client.logoutObserver.exsd"/>
-   <extension-point id="org.eclipse.emf.emfstore.client.commitObserver" name="Commit Observer" schema="schema/org.eclipse.emf.emfstore.client.commitObserver.exsd"/>
-   <extension-point id="org.eclipse.emf.emfstore.client.updateObserver" name="Update Observer" schema="schema/org.eclipse.emf.emfstore.client.updateObserver.exsd"/>
-   <extension-point id="org.eclipse.emf.emfstore.client.checkoutObserver" name="Commit Observer" schema="schema/org.eclipse.emf.emfstore.client.checkoutObserver.exsd"/>
-   <extension-point id="org.eclipse.emf.emfstore.client.exceptionObserver" name="Exception Observer" schema="schema/org.eclipse.emf.emfstore.client.exceptionObserver.exsd"/>
-   <extension-point id="org.eclipse.emf.emfstore.client.version" name="Client Version " schema="schema/org.eclipse.emf.emfstore.client.version.exsd"/>
-   <extension-point id="org.eclipse.emf.emfstore.client.runnableContext" name="Runnable Context" schema="schema/org.eclipse.emf.emfstore.client.runnableContext.exsd"/>
-   <extension-point id="org.eclipse.emf.emfstore.client.mergeObserver" name="Merge Observer" schema="schema/org.eclipse.emf.emfstore.client.mergeObserver.exsd"/>
-   <extension-point id="org.eclipse.emf.emfstore.client.checksumErrorHandler" name="Client Checksum Error Handler" schema="schema/org.eclipse.emf.emfstore.client.checksumErrorHandler.exsd"/>
+   <extension-point id="workspaceLocationProvider" name="Workspace Location Provider" schema="schema/workspaceLocationProvider.exsd"/>
+   <extension-point id="defaultConfigurationProvider" name="Default Configuration Provider" schema="schema/defaultConfigurationProvider.exsd"/>
+   <extension-point id="workspaceInitObserver" name="Workspace Init Observer" schema="schema/workspaceInitObserver.exsd"/>
+   <extension-point id="editingDomainProvider" name="EditingDomain Provider" schema="schema/editingDomainProvider.exsd"/>
+   <extension-point id="changeRecordingOptions" name="Recording options" schema="schema/changeRecordingOptions.exsd"/>
+   <extension-point id="inverseCrossReferenceCache" name="Inverse Cross Referene Cache" schema="schema/inverseCrossReferenceCache.exsd"/>
+   <extension-point id="usersessionProvider" name="SessionProvider" schema="schema/usersessionProvider.exsd"/>
+   <extension-point id="notificationFilter" name="Notification Filter" schema="schema/notificationFilter.exsd"/>
+   <extension-point id="loginObserver" name="Login Observer" schema="schema/loginObserver.exsd"/>
+   <extension-point id="logoutObserver" name="Logout Observer" schema="schema/logoutObserver.exsd"/>
+   <extension-point id="commitObserver" name="Commit Observer" schema="schema/commitObserver.exsd"/>
+   <extension-point id="updateObserver" name="Update Observer" schema="schema/updateObserver.exsd"/>
+   <extension-point id="checkoutObserver" name="Commit Observer" schema="schema/checkoutObserver.exsd"/>
+   <extension-point id="exceptionObserver" name="Exception Observer" schema="schema/exceptionObserver.exsd"/>
+   <extension-point id="clientVersion" name="Client Version " schema="schema/clientVersion.exsd"/>
+   <extension-point id="runnableChangeContext" name="Runnable Change Context" schema="schema/runnableChangeContext.exsd"/>
+   <extension-point id="mergeObserver" name="Merge Observer" schema="schema/mergeObserver.exsd"/>
+   <extension-point id="checksumErrorHandler" name="Client Checksum Error Handler" schema="schema/checksumErrorHandler.exsd"/>
+   <extension-point id="postCreationObserver" name="Post-Creation Observer" schema="schema/postCreationObserver.exsd"/>
   <extension point="org.eclipse.emf.ecore.generated_package">
     <package 
        uri = "http://eclipse.org/emf/emfstore/client/model" 
@@ -35,60 +36,60 @@
   </extension>
 
   <extension
-        point="org.eclipse.emf.emfstore.common.observer">
+        point="org.eclipse.emf.emfstore.common.observerBusExtensionPointRegistration">
      <observer
            extensionPointName="org.eclipse.emf.emfstore.internal.client.loginObserver"
            observerAttributeName="loginObserver">
      </observer>
   </extension>
   <extension
-        point="org.eclipse.emf.emfstore.common.observer">
+        point="org.eclipse.emf.emfstore.common.observerBusExtensionPointRegistration">
      <observer
            extensionPointName="org.eclipse.emf.emfstore.internal.client.logoutObserver"
            observerAttributeName="logoutObserver">
      </observer>
   </extension>
   <extension
-        point="org.eclipse.emf.emfstore.common.observer">
+        point="org.eclipse.emf.emfstore.common.observerBusExtensionPointRegistration">
      <observer
            extensionPointName="org.eclipse.emf.emfstore.internal.client.updateObserver"
            observerAttributeName="updateObserver">
      </observer>
   </extension>
   <extension
-        point="org.eclipse.emf.emfstore.common.observer">
+        point="org.eclipse.emf.emfstore.common.observerBusExtensionPointRegistration">
      <observer
            extensionPointName="org.eclipse.emf.emfstore.internal.client.commitObserver"
            observerAttributeName="commitObserver">
      </observer>
   </extension>
   <extension
-        point="org.eclipse.emf.emfstore.common.observer">
-     <observer
-           extensionPointName="org.eclipse.emf.emfstore.internal.client.openModelElementObserver"
-           observerAttributeName="openModelElementObserver">
-     </observer>
-  </extension>
-  <extension
-        point="org.eclipse.emf.emfstore.common.observer">
+        point="org.eclipse.emf.emfstore.common.observerBusExtensionPointRegistration">
      <observer
            extensionPointName="org.eclipse.emf.emfstore.internal.client.checkoutObserver"
            observerAttributeName="checkoutObserver">
      </observer>
   </extension>
   <extension
-        point="org.eclipse.emf.emfstore.common.observer">
+        point="org.eclipse.emf.emfstore.common.observerBusExtensionPointRegistration">
      <observer
            extensionPointName="org.eclipse.emf.emfstore.internal.client.exceptionObserver"
            observerAttributeName="exceptionObserver">
      </observer>
   </extension>
   <extension
-        point="org.eclipse.emf.emfstore.common.observer">
+        point="org.eclipse.emf.emfstore.common.observerBusExtensionPointRegistration">
      <observer
            extensionPointName="org.eclipse.emf.emfstore.internal.client.mergeObserver"
            observerAttributeName="mergeObserver">
      </observer>
   </extension>
+  <extension
+        point="org.eclipse.emf.emfstore.common.observerBusExtensionPointRegistration">
+      <observer
+            extensionPointName="org.eclipse.emf.emfstore.internal.client.postCreationObserver"
+            observerAttributeName="postCreationObserver">
+     </observer>
+   </extension>
 
 </plugin>
