--- a/org.eclipse.emf.emfstore.common/plugin.xml
+++ b/org.eclipse.emf.emfstore.common/plugin.xml
@@ -1,14 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
-   <extension-point id="org.eclipse.emf.emfstore.common.observer.postcreation" name="Post-Creation Observer" schema="schema/org.eclipse.emf.emfstore.common.observer.postcreation.exsd"/>
-   <extension-point id="org.eclipse.emf.emfstore.common.observer" name="Observer Markup Interface" schema="schema/org.eclipse.emf.emfstore.common.observer.exsd"/>
-   <extension
-         point="org.eclipse.emf.emfstore.common.observer">
-      <observer
-            extensionPointName="org.eclipse.emf.emfstore.common.observer.postcreation"
-            observerAttributeName="postcreationobserver">
-      </observer>
-   </extension>
-
+   <extension-point id="observerBusExtensionPointRegistration" name="Observer Markup Interface" schema="schema/observerBusExtensionPointRegistration.exsd"/>
 </plugin>
