--- a/org.eclipse.emf.emfstore.client.test/pom.xml
+++ b/org.eclipse.emf.emfstore.client.test/pom.xml
@@ -4,13 +4,13 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.eclipse.emf.emfstore.internal</groupId>
+    <groupId>org.eclipse.emf.emfstore</groupId>
     <artifactId>emfstore-parent</artifactId>
     <version>0.9.3-SNAPSHOT</version>
     <relativePath>../../org.eclipse.emf.emfstore.releng/emfstore-parent/</relativePath>
   </parent>
 
-  <groupId>org.eclipse.emf.emfstore.internal</groupId>
+  <groupId>org.eclipse.emf.emfstore</groupId>
   <artifactId>org.eclipse.emf.emfstore.client.test</artifactId>
   <version>0.9.3-SNAPSHOT</version>
   <packaging>eclipse-test-plugin</packaging>
